# PDC_sem_2

./: CMakeLists.txt  HyperThreadingSimulator.cpp  HyperThreadingSimulator.h  HyperThreadingSimulator_6.cpp  HyperThreadingSimulator_6.h  HyperThreadingSimulator_7.cpp  HyperThreadingSimulator_7.h  HyperThreadingSimulator_8.cpp  HyperThreadingSimulator_8.h  SimulatorHyperThread.cpp  SimulatorHyperThread.h  Task.cpp  Task.h  TaskTimer.cpp  TaskTimer.h  ThreadVirtual.cpp  ThreadVirtual.h  VirtualThread.cpp  VirtualThread.h  VirtualThread_6.cpp  VirtualThread_6.h  VirtualThread_7.cpp  VirtualThread_7.h  VirtualThread_8.cpp  VirtualThread_8.h  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp
